index, assets, styles and components

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,307 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Jost&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+:root {
+  --color-primary: #6a398c;
+  --color-primary-light: #804595;
+  --color-primary-lighter: #9c539c;
+  --color-secondary: #c967a2;
+  --color-secondary-light: #d876a9;
+
+  --color-gray-light: #efefef;
+
+  --color-dark-text: #444;
+
+  --font-primary: 'Lato', sans-serif;
+  --font-headings: 'Jost', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* General */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html {
+  font-size: 62.5%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  font-size: 1.6rem;
+  font-family: var(--font-primary);
+  background: var(--color-gray-light);
+  color: var(--color-dark-text);
+}
+
+
+/* Header */
+.header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
+  margin-bottom: 1.5rem;
+  margin-top: 2rem;
+}
+
+.header-content {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  gap: 1rem;
+}
+
+.header-image {
+  width: 20%;
+}
+
+h1 {
+  font-size: 8rem;
+  color: var(--color-primary);
+  /* margin-bottom: 1rem; */
+}
+
+h1 span {
+  color: var(--color-secondary);
+}
+
+.header-text p {
+  margin-left: 1rem;
+  text-align: left;
+}
+
+h1,
+h3 {
+  font-family: var(--font-headings);
+}
+
+.container {
+  margin: 0 auto;
+  padding: 2.3rem;
+}
+
+/* Filters */
+.filter-container {
+  display: flex;  
+  flex-direction: row; 
+  align-items: center; 
+  margin: 0 auto;
+  width: 80rem; 
+  position: relative; 
+}
+
+/* Search input */
+.search-container {
+  position: relative;
+  flex: 2;
+  display: flex;
+  margin-right: 1rem;
+}
+
+.search-input {
+  flex: 2;
+  padding: 1.3rem;
+  border: .1rem solid #ccc;
+  border-radius: .5rem;
+}
+
+.search-icon {
+  position: absolute;
+  right: 1.2rem;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #999;
+  pointer-events: none;
+}
+
+/* Category filter */
+.category-container {
+  flex: 1;
+}
+
+.category-select {
+  width: 100%;
+  padding: 1.3rem;
+  border: .1rem solid #ccc;
+  border-radius: .5rem;
+  color: #999;
+}
+
+/* Pagination */
+.pagination {
+  position: absolute;
+  margin-top: 9rem;
+  margin-left: 71.3rem;
+}
+
+.pagination button {
+  font-size: 1.6rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #333;
+  margin-right: 1rem;
+}
+
+.pagination button:disabled {
+  color: #aaa;
+  cursor: not-allowed;
+}
+
+.pagination span {
+  font-size: 1.4rem;
+  margin-right: 1rem;
+}
+
+/* Terms cards */
+.cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+  justify-items: center;
+  margin: 0 auto;
+  margin-top: 5rem;
+  max-width: 80rem;
+} 
+
+.term {
+  margin-bottom: 2rem;
+  padding: 2.3rem;
+  border-radius: .4rem;
+  color: black;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transform: scale(1);
+  transition: all 300ms ease-in-out;
+  position: relative;
+  background: #ffffff;
+}
+
+.term::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: .5rem;
+  height: 100%;
+  background-color: var(--color-primary-light);
+  border-top-left-radius: .5rem;
+  border-bottom-left-radius: .5rem;
+}
+
+.term:hover {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  transform: scale(1.02); 
+}
+
+.term p {
+  margin-top: .8rem;
+  margin-bottom: 0;
+}
+
+/* Footer */
+.footer {
+  background-color: var(--color-primary);
   color: white;
+  padding: 3rem;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+
+.footer a {
+  text-decoration: none;
+  color: white;
+  border-bottom: .2rem solid transparent;
+  transition: border-bottom 0.8s ease;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.footer a:hover {
+  border-bottom: .2rem solid white;
+}
+
+
+/* Media queries */
+@media (max-width: 1024px) {
+  /* iPad Air */
+  .filter-container {
+    width: 90%;
+    max-width: 1024px;
+    margin: 0 auto;
   }
-  to {
-    transform: rotate(360deg);
+
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1rem;
+    max-width: 1024px;
+  }
+}
+
+@media (max-width: 768px) {
+  /* Tablets e dispositivos menores */
+  .filter-container {
+    flex-direction: column;
+    align-items: stretch;
+    width: auto;
+  }
+
+  .search-container {
+    margin-right: 0;
+    margin-bottom: 1rem;
+  }
+
+  .search-input {
+    flex: 1;
+  }
+
+  .category-container {
+    margin-left: 0;
+    margin-top: 1rem;
+  }
+
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1rem;
+    max-width: none;
+  }
+}
+
+@media (max-width: 480px) {
+  /* Dispositivos móveis */
+  .cards {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 768px) {
+  /* Tablets e dispositivos menores */
+  .header-content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .header-image {
+    margin-top: 1rem;
+    width: 40%;
+  }
+
+  h1 {
+    font-size: 6rem;
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: 480px) {
+  /* Dispositivos móveis */
+  .header-content {
+    gap: 0.5rem;
+  }
+
+  .header-image {
+    width: 60%;
+  }
+
+  h1 {
+    font-size: 4rem;
   }
 }
