--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,36 +1,244 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-
-:root {
-  --color-primary: #6a398c;
-  --color-primary-light: #804595;
-  --color-secondary: #c967a2;
-  --color-secondary-light: #fca2d0;
-
-  --color-gray-light: #efefef;
-
-  --color-dark-text: #444;
-
-  --font-primary: 'Lato', sans-serif;
-  --font-headings: 'Jost', sans-serif;
+/* Header */
+.header-logo-link {
+  text-decoration: none;
 }
 
-/* General */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 1.5rem;
+  margin-top: 2rem;
 }
 
-html {
-  font-size: 62.5%;
+.header-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
-body {
-  font-size: 1.6rem;
-  font-family: var(--font-primary);
-  background: var(--color-gray-light);
+.header-image {
+  width: 20%;
+}
+
+h1 {
+  font-size: 8rem;
+  color: var(--color-primary);
+}
+
+h1 span {
+  color: var(--color-secondary);
+}
+
+.header-text p {
+  margin-left: 1rem;
+  text-align: left;
   color: var(--color-dark-text);
 }
 
+h1,
+h3 {
+  font-family: var(--font-headings);
+}
 
+.container {
+  min-height: calc(100vh - 31.5rem); 
+  margin: 0 auto;
+  padding: 2.3rem;
+}
+
+
+/* Filters */
+.filter-container {
+  display: flex;  
+  flex-direction: row; 
+  align-items: center; 
+  margin: 0 auto;
+  width: 80rem; 
+  position: relative; 
+}
+
+/* Search input */
+.search-container {
+  position: relative;
+  flex: 2;
+  display: flex;
+  margin-right: 1rem;
+}
+
+.search-input {
+  flex: 2;
+  padding: 1.3rem;
+  border: .1rem solid #ccc;
+  border-radius: .5rem;
+}
+
+.search-icon {
+  position: absolute;
+  right: 1.2rem;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #999;
+  pointer-events: none;
+}
+
+/* Category filter */
+.category-container {
+  flex: 1;
+}
+
+.category-select {
+  width: 100%;
+  padding: 1.3rem;
+  border: .1rem solid #ccc;
+  border-radius: .5rem;
+  color: #999;  
+}
+
+/* Pagination */
+.pagination {
+  position: absolute;
+  margin-top: 9rem;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+
+.pagination button {
+  font-size: 1.6rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #333;
+  margin-right: 1rem;
+}
+
+.pagination button:disabled {
+  color: #aaa;
+  cursor: not-allowed;
+}
+
+.pagination span {
+  font-size: 1.4rem;
+  margin-right: 1rem;
+}
+
+/* Terms cards */
+.cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+  justify-items: center;
+  margin: 0 auto;
+  margin-top: 5rem;
+  max-width: 80rem;
+} 
+
+.term {
+  margin-bottom: 2rem;
+  padding: 2.3rem;
+  border-radius: .4rem;
+  color: black;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transform: scale(1);
+  transition: all 300ms ease-in-out;
+  position: relative;
+  background: #ffffff;
+}
+
+.term::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: .5rem;
+  height: 100%;
+  background-color: var(--color-primary-light);
+  border-top-left-radius: .5rem;
+  border-bottom-left-radius: .5rem;
+}
+
+.term:hover {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  transform: scale(1.02); 
+}
+
+.term p {
+  margin-top: .8rem;
+  margin-bottom: 0;
+}
+
+/* Footer */
+.footer {
+  background-color: var(--color-primary);
+  padding: 2.3rem;
+  position: sticky;
+  width: 100%;
+  bottom: 0;
+  margin-top: 1.5rem;
+} 
+
+.footer-text {
+  display: flex;
+  justify-content: space-between;
+  color: var(--color-secondary-light);
+}
+
+.footer-text span,
+.footer-text .author,
+.footer .author a
+ {
+  color: white;
+}
+
+.footer .author a {
+  text-decoration: none;
+  border-bottom: .2rem solid transparent;
+  transition: all 0.8s ease-in-out;
+}
+
+.footer .author a:hover {
+  color: var(--color-secondary-light);
+}
+
+/* Media queries */
+@media (max-width: 375px) {
+  .header-image {
+    width: 30%;
+  }
+
+  .filter-container {
+    flex-direction: row;
+  }
+}
+
+@media (max-width: 1024px) {
+  .header-image {
+    width: 28%;
+  }
+
+  h1 {
+    font-size: 5.5rem;
+  }
+
+  .header-text p {
+    font-size: 2.3rem;;
+  }
+  
+  .filter-container {
+    width: 100%;
+    max-width: 1024px;
+    margin: 0 auto;
+  }
+
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1rem;
+    max-width: 100%;
+  }
+}
